# Family-Finance

./: .gitignore  Family-Finance.sln  README.md  gitignore  package-lock.json  package.json
app/client/: package-lock.json  package.json
app/client/app/: globals.css  layout.tsx  page.tsx
app/client/app/dashboard/: page.tsx
app/client/app/login/: page.tsx
app/client/app/register/: page.tsx
app/client/components/: LoginForm.tsx  SignUpForm.tsx
app/server/: Program.cs  login.json  package-lock.json  package.json  server.http  server.js
app/server/Properties/: launchSettings.json
app/serverGo/: go.mod  server.go
app/serverNew/myDrogonServer/: CMakeLists.txt  conanfile.txt  index.html  main.cc
app/serverNew/myDrogonServer/test/: CMakeLists.txt
app/serverboost/: .gitignore  CMakeLists.txt
app/serverboost/src/: main.cpp  test.cppm
app/viteClient/app/: package-lock.json
client/: package-lock.json  package.json
client/components/: AccountMenu.tsx  AuthProvider.tsx  DashboardCard.tsx  DashboardNavigation.tsx  MonthlyBillChart.tsx  MonthlyBillDonut.tsx
client/src/: App.tsx  main.tsx
client/src/pages/: Bills.tsx  Dashboard.tsx  Home.tsx  Login.tsx  Register.tsx
serverGo/: go.mod  go.sum  server.go
